# zamanalif-train-dataset-cooking

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: annotation_scope.md  antat_rule_gap_summary.md  dsl_policy_audit.md  zamanalif_conversion_rules.md
src/tatar_preannotator/: __init__.py  annotate.py  antat_gold.py  antat_reference.py  antat_sanity.py  cli.py  config.py  conversion.py  db.py  gemini_client.py  labelstudio_import.py  prompt.py  schema.py  training_export.py  validate.py  word_export.py
src/zamanalif_selector/: __init__.py  cli.py  features.py  io.py  progress.py  report.py  segment.py  selector.py
tests/: antat_gold_reference_cases.py  test_antat_gold_reference.py  test_antat_reference.py  test_antat_sanity.py  test_cli.py  test_conditional_conversion_dsl.py  test_conversion_dsl.py  test_features.py  test_labelstudio_import.py  test_preannotator_annotate.py  test_preannotator_cli.py  test_preannotator_prompt_config.py  test_preannotator_validation.py  test_preannotator_word_export.py  test_segment.py  test_selector_report.py  test_training_export.py  test_zamanalif_pdf_reference.py
