[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zamanalif-train-dataset-cooking"
version = "0.1.0"
description = "Select Tatar sentence annotation examples for Zamanalif-2012 conversion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18",
  "google-genai>=1.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.scripts]
zamanalif-select = "zamanalif_selector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
